// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should chain deep sequences correctly 1`] = `"kQBQPW-zThrza1LiZjnra-pBsz4IXxxy3tLQ0aoWfExekmCx"`;

exports[`feature-random should chain deep sequences correctly 2`] = `"kQClDhaDsNeaYca_jy6f2e67dKrAGszHoVHYW6OV6J_Hvka9"`;

exports[`feature-random should chain deep sequences correctly 3`] = `"kQAOtcEXbLMg1YRSKXUoophqCKj_IWY6H7pCD9CD8bwFfc9B"`;

exports[`feature-random should chain deep sequences correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQBQPW-zThrza1LiZjnra-pBsz4IXxxy3tLQ0aoWfExekmCx",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 18377n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQBQPW-zThrza1LiZjnra-pBsz4IXxxy3tLQ0aoWfExekmCx",
            "to": "kQClDhaDsNeaYca_jy6f2e67dKrAGszHoVHYW6OV6J_Hvka9",
            "type": "internal",
            "value": 9965642000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBQPW-zThrza1LiZjnra-pBsz4IXxxy3tLQ0aoWfExekmCx",
          "to": "kQClDhaDsNeaYca_jy6f2e67dKrAGszHoVHYW6OV6J_Hvka9",
          "type": "internal",
          "value": 9965642000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 17278n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQClDhaDsNeaYca_jy6f2e67dKrAGszHoVHYW6OV6J_Hvka9",
            "to": "kQAOtcEXbLMg1YRSKXUoophqCKj_IWY6H7pCD9CD8bwFfc9B",
            "type": "internal",
            "value": 9937558000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQClDhaDsNeaYca_jy6f2e67dKrAGszHoVHYW6OV6J_Hvka9",
          "to": "kQAOtcEXbLMg1YRSKXUoophqCKj_IWY6H7pCD9CD8bwFfc9B",
          "type": "internal",
          "value": 9937558000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 17206n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQAOtcEXbLMg1YRSKXUoophqCKj_IWY6H7pCD9CD8bwFfc9B",
            "to": "kQAOtcEXbLMg1YRSKXUoophqCKj_IWY6H7pCD9CD8bwFfc9B",
            "type": "internal",
            "value": 9909538000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQAOtcEXbLMg1YRSKXUoophqCKj_IWY6H7pCD9CD8bwFfc9B",
          "to": "kQAOtcEXbLMg1YRSKXUoophqCKj_IWY6H7pCD9CD8bwFfc9B",
          "type": "internal",
          "value": 9909538000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 4825n,
      },
    ],
  },
]
`;
